# test_task

./: .gitmodules  CMakeLists.txt  README.md
data/: db.txt
src/client/: CMakeLists.txt  client.cpp  client.h  main.cpp  options.h  session.cpp  session.h  token_data_base.h
src/common/: CMakeLists.txt
src/common/include/core/: algo.h  assert.h  checked_cast.h  endian.h  exception.h  hton.h  network_reader.h  program_options.h  range.h  record.h  record_parser.h
src/common/include/protocol/: record_builder.h  record_type.h
src/common/src/: record_parser.cpp
src/common/test/core/: endian_test.cpp  network_reader_test.cpp
src/common/test/protocol/: record_builder_test.cpp
src/server/: CMakeLists.txt  client_session.cpp  client_session.h  listen_server.h  main.cpp  options.h  protocol_handler.cpp  protocol_handler.h  record_parser.cpp  record_parser.h
src/server/source/: client_info.h  client_session.cpp  client_session.h  connection_container.cpp  connection_container.h  connections.cpp  connections.h  listen_server.cpp  listen_server.h  logger.cpp  logger.h  main.cpp  options.h  protocol_handler.cpp  protocol_handler.h  record.h  record_parser.cpp  token_handler.cpp  token_handler.h  token_handler_manager.cpp  token_handler_manager.h  token_handler_state_logger.cpp  token_handler_state_logger.h
src/server/test/: protocol_handler_test.cpp  record_parser_test.cpp
